2003/10/18 22:53 (+0200) kaffeetisch

	* t/GnomeIconList.t: Alter $list -> get_selection test to be more
	accurate.

	* t/GnomeIconTheme.t: Implement $theme -> list_icons test.

	* xs/GnomeIconList.xs
	* xs/GnomeIconTheme.xs
	* xs/GnomeProgram.xs: Don't use a temporary G(S)List in
	gnome_icon_list_get_selection, gnome_icon_theme_list_icons and
	gnome_program_locate_file.

	* xs/GnomeIconEntry.xs
	* xs/GnomeIconList.xs
	* xs/GnomeIconSelection.xs
	* xs/GnomePixmapEntry.xs: Use gchar_own instead of gchar for the
	return value of gnome_icon_entry_get_filename,
	gnome_icon_list_get_icon_filename, gnome_icon_selection_get_icon
	and gnome_pixmap_entry_get_filename.

2003/10/17 22:02 (+0200) kaffeetisch

	R t/GnomeVFSOps
	R t/GnomeVFSURI.t
	R xs/GnomeVFSInit.xs
	R xs/GnomeVFSOps.xs
	R xs/GnomeVFSURI.xs
	* MANIFEST
	* Makefile.PL
	* README
	* genmaps.pl
	* gnome2perl.h
	* gnome2perl.typemap
	* maps: Remove all references to GnomeVFS.  It's going to get its
	own package.

2003/10/12 21:49 (+0200) kaffeetisch

	* xs/Gnome2.xs: Remove calls to UNUSED.

2003/10/09 02:42 (+0200) kaffeetisch

	* genmaps.pl: Make warnings and strict safe.  Use descriptive
	variable names.  Remove every reference to GnomeCanvas.

2003/10/08 00:33 (+0200) kaffeetisch

	* Makefile.PL: Install gnome2perl-vfs-gtypes.h.

2003/10/07 23:57 (+0200) kaffeetisch

	* genmaps.pl: Include xs/gnome2perl-vfs-gtypes.c when compiling
	the helper program.

	* gnome2perl.h: Declare GnomeVFSURI converters.

	* xs/GnomeVFSURI.xs: Add destruction handler.  Call
	gnome_vfs_uri_relative_new instead of
	gnome_vfs_uri_resolve_relative when we're older than 1.9.1.
	Cosmetical cleanups.

	A t/GnomeVFSOps
	A xs/GnomeVFSOps.xs
	* MANIFEST
	* gnome2perl.h
	* gnome2perl.typemap
	* t/GnomeVFSURI.t: Initial partial implementation of GnomeVFSOps.
	The test isn't included in make test because it creates and
	deletes files.

2003/10/07 10:34 (-0400) muppetman

	* xs/GnomeVFSURI.xs: gnome-vfs-uri.h apparently gets #included via